--- a/ui/src/css/main.css
+++ b/ui/src/css/main.css
@@ -7,6 +7,11 @@ body.-toc aside.toc.sidebar {
     display: none;
   }
 
+  aside.toc.embedded {
+    margin-top: 2.5rem;
+    margin-bottom: 2.34rem;
+  }
+
   main > div {
     overflow-x: auto;
     max-width: 100vw;
